--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	 		console.log(document.getElementById("row").style.opacity);
 	 	}
 	  	var typed = new Typed('.typed-main', {
-		  strings: ["","Hey Naveen.", "It's Anand!","Guess what this is...","           ","...your birthday card!","Sara is scared that we're all getting too old...","but I think the fun for us three is just beginning","16 seems like a big year","I know things are probably getting awkward","with the whole puberty thing and all...","don't be embarassed!","everyone wets their bed every now and then","Anyways...cough...cough...","     ","You mean more to me than you know","it's hard that I'm missing your high school years","but I'm not as busy as you think...","SO CALL ME!","I want to see you shine the next three years","Try to see what others' say as persepctives","and choose to do things because YOU want them or think they're right","create art","make friends"," stay funny","be sensitive but not fragile","love life and think about times when you are most fulfilled, happy, and excited to create","I will see you soon you bum","    " ,"I love you.","                                                                                        ","- Anand"],
+		  strings: ["","Hey Naveen.", "It's Anand!","Guess what this is...","           ","...your birthday card!","Sara is scared that we're all getting too old...","but I think the fun for us three is just beginning","16 seems like a big year","I know things are probably getting awkward","with the whole puberty thing and all...","don't be embarassed!","everyone wets their bed every now and then","Anyways...cough...cough...","     ","You mean more to me than you know","it's hard that I'm missing your high school years","but I'm not as busy as you think...","SO CALL ME!","I want to see you shine the next three years","Try to see what others say as persepctives","and choose to do things because YOU want them or think they're right","create art","make friends"," stay funny","be sensitive but not fragile","love life and think about times when you are most fulfilled, happy, and excited to create","I will see you soon you bum","    " ,"I love you.","                                                                                        ","- Anand"],
 		  typeSpeed: 90,
 		  backSpeed: 30,
 		  onStringTyped: function(self) { showImages() },
@@ -39,8 +39,10 @@
 	    <img src="images/3.jpg" style="width:100%">
 	    <img src="images/4.jpg" style="width:100%">
 	   	<img src="images/17.jpg" style="width:100%">
-	    <img src="images/18.jpg" style="width:100%">
-
+	    <img src="images/24.jpg" style="width:100%">
+	    <img src="images/22.jpg" style="width:100%">
+	    <img src="images/23.jpg" style="width:100%">
+	    <img src="images/34.jpg" style="width:100%">
 
 	  </div>
 	  <div class="column">
@@ -50,6 +52,9 @@
 	   	<img src="images/19.jpg" style="width:100%">
 	    <img src="images/20.jpg" style="width:100%">
 	    <img src="images/21.jpg" style="width:100%">
+	    <img src="images/25.jpg" style="width:100%">
+	    <img src="images/26.jpg" style="width:100%">
+	    <img src="images/27.jpg" style="width:100%">
 
 
 	  </div>
@@ -58,6 +63,10 @@
 	    <img src="images/9.jpg" style="width:100%">
 	    <img src="images/10.jpg" style="width:100%">
 	    <img src="images/11.jpg" style="width:100%">
+	    <img src="images/18.jpg" style="width:100%">
+	    <img src="images/28.jpg" style="width:100%">
+	    <img src="images/29.jpg" style="width:100%">
+	    <img src="images/30.jpg" style="width:100%">
 
 	  </div>
 	  <div class="column">
@@ -66,6 +75,9 @@
 	    <img src="images/14.jpg" style="width:100%">
 	    <img src="images/15.jpg" style="width:100%">
 	    <img src="images/16.jpg" style="width:100%">
+	    <img src="images/31.jpg" style="width:100%">
+	    <img src="images/32.jpg" style="width:100%">
+	    <img src="images/33.jpg" style="width:100%">
 
 	  </div>
 	</div>
