--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Naveen 16th Birthday</title>
+  <title>4/17</title>
   <script src="typed/lib/typed.min.js" type="text/javascript"></script>
   <script src="typed/assets/demos.js"></script>
   <link href="typed/assets/demos.css" rel="stylesheet"/>
   <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body id="body">
 
 	<div class = "typed-center">
 	  <h1 class = "typed-main">
@@ -66,7 +66,6 @@
 	    <img src="images/18.jpg" style="width:100%">
 	    <img src="images/28.jpg" style="width:100%">
 	    <img src="images/29.jpg" style="width:100%">
-	    <img src="images/30.jpg" style="width:100%">
 
 	  </div>
 	  <div class="column">
